# AB_test

./: .gitignore  CLAUDE.md  PLAN.md  README.md  docker-compose.yml  preview.html
backend/: .env.example  conftest.py  pyproject.toml
backend/app/: config.py  db.py  dependencies.py  main.py
backend/app/api/: analysis.py  assign.py  errors.py  events.py  experiments.py  health.py  power.py
backend/app/assignment/: hasher.py
backend/app/models/: __init__.py  event.py  experiment.py  result.py
backend/app/schemas/: __init__.py  analysis.py  event.py  experiment.py  power.py
backend/app/services/: analysis_service.py  assignment_service.py  event_service.py  experiment_service.py
backend/app/stats/: __init__.py  bandit.py  base.py  bayesian.py  confidence_sequence.py  cuped.py  frequentist.py  multiple_testing.py  novelty_detection.py  power_analysis.py  segment_analysis.py  sequential.py
backend/scripts/: realistic_case.py  seed_demo.py  simulate_experiment.py
backend/tests/test_integration/: test_full_experiment.py
backend/tests/test_services/: test_assignment.py
backend/tests/test_stats/: test_bandit.py  test_bayesian.py  test_confidence_sequence.py  test_cuped.py  test_frequentist.py  test_multiple_testing.py  test_novelty_detection.py  test_power_analysis.py  test_sequential.py
docs/: ARCHITECTURE.md  DECISION_TREE.md  STATISTICAL_METHODS.md
frontend/: package-lock.json  package.json
frontend/src/: App.tsx  index.css
frontend/src/api/: analysis.ts  client.ts  experiments.ts
frontend/src/hooks/: useAnalysis.ts  useExperiment.ts
(+16 files in other folders)
